--- a/skeleton/client/public/index.html
+++ b/skeleton/client/public/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
   <div id="root"></div>
-  <form action="/list" method="get">
+  <form action="/search" method="GET">
+    <input  name="title" placeholder="입력 해주세요">
     <button type="submit">누르세요</button>
   </form>
-  <script src="../index.js"></script>
+  <script type="module" src="../index.js"></script>
 </body>
 </html>
