Fix | index.html : form 주소 변경

--- a/skeleton/client/public/index.html
+++ b/skeleton/client/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="root"></div>
-  <form action="/search" method="GET">
+  <form action="http://localhost:3001/search" method="GET">
     <input  name="title" placeholder="입력 해주세요">
     <button type="submit">누르세요</button>
   </form>
