feat | index.html
html 내 form 태그 삭제 및 스크립트 링크 수정

--- a/skeleton/client/public/index.html
+++ b/skeleton/client/public/index.html
@@ -7,10 +7,8 @@
 </head>
 <body>
   <div id="root"></div>
-  <form action="http://localhost:3001/search" method="GET">
     <input  name="title" placeholder="입력 해주세요">
     <button type="submit">누르세요</button>
-  </form>
-  <script type="module" src="../index.js"></script>
+  <script type="module" src="./js/index.js"></script>
 </body>
 </html>
